fixed the settings-page spacing and upload-icon size

--- a/front_end/src/settings-page.css
+++ b/front_end/src/settings-page.css
@@ -6,7 +6,7 @@
   color: #fff;
   display: flex;
   flex-direction: column;
-  padding-top: 90px;
+  padding-top: 60px;
   box-sizing: border-box;
   overflow-y: auto;
 }
@@ -38,7 +38,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 1rem;
   margin-bottom: 4rem;
 }
 
