--- a/front_end/src/upload_page.css
+++ b/front_end/src/upload_page.css
@@ -186,8 +186,8 @@ h1 {
 
 /* Upload icon */
 .upload-icon {
-  width: 48px;
-  height: 48px;
+  width: 65px;
+  height: 65px;
   margin-bottom: 1rem;
 }
 
